# Skeletonization

./: .gitignore  README.md
fiji_ijm/: Macro.ijm.ijm.java
kimimaro/script/: README.md  config.json  note.md
kimimaro/scripts/: README.md  run_skeletonization.py  test_coordinate_order.py  test_mask_components.py
skeleton_python/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
skeleton_python/pipeline/: __init__.py  config_utils.py  preprocess_config.json  preprocess_config.yaml  run_full_pipeline.py  run_preprocess.py  skeleton_config.json  skeleton_config.yaml  utils.py
skeleton_python/preprocess/: __init__.py  check_tif_format.py  clean_masks.py  otsu_threshold.py
skeleton_python/skeleton_pipeline/: README.md  config_filopodia.yaml  requirements.txt  run.py  utils.py
skeleton_python/skeleton_pipeline/config/: config.yaml  config_filopodia.yaml  config_sample.yaml  config_try_skeleton_image.yaml
skeleton_python/skeleton_pipeline/scripts/: __init__.py  step01_format.py  step02_otsu.py  step03_clean.py  step04_skeleton.py  step05_analyze.py
skeleton_python/skeleton_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skeleton_python/skeletonize/: __init__.py  kimimaro_runner.py  length_analysis.py
